--- a/rosinno2.html
+++ b/rosinno2.html
@@ -24,8 +24,54 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.1/js/i18n/defaults-*.min.js"></script>
 	<script src="https://www.gstatic.com/firebasejs/3.6.6/firebase.js"></script>
 	<script src="https://cdn.firebase.com/js/client/2.4.2/firebase.js"></script>
+      <script src="https://www.gstatic.com/firebasejs/3.2.1/firebase.js">
+    </script>
 </head>
 <body>
+  <script>
+    var config =
+    {
+      apiKey: "AIzaSyCWBoSd6rFV3-Hvtr0DvStb0je2-BusJ28",
+      authDomain: "locationgps-e70a9.firebaseapp.com",
+      databaseURL: "https://locationgps-e70a9.firebaseio.com",
+      storageBucket: "locationgps-e70a9.appspot.com",
+    };
+    firebase.initializeApp(config);
+    function getimage(index){
+      var storage = firebase.storage();
+      var storageRef = storage.ref();
+      var input= index
+      var tangRef = storageRef.child('image/'+input+'.jpg');
+
+      tangRef.getDownloadURL().then(function(url) 
+      {
+        var test = url
+        document.querySelector('img').src = test;
+      }).catch(function(error) 
+      {
+        switch (error.code) 
+        {
+          case 'storage/object_not_found':
+          break;
+
+          case 'storage/unauthorized':
+          break;
+
+          case 'storage/canceled':
+          break;
+
+          case 'storage/unknown':
+          break;
+        }
+      });
+      var test = 'firebase_url';
+      document.querySelector('img').src = test;
+      console.log('Before requesting download URL');
+      tangRef.getDownloadURL().then(function(url) {
+        console.log('Got download URL');
+      });
+    }
+  </script>
 <div class="row">
     <div class="col-lg-12">
       <h1 class="page-header">
@@ -43,7 +89,7 @@
           <h3 class = "panel-title"><center>Increase Reliability from 2 SOURCE to EDS</center></h3>
         </div>
         <div class = "panel-body">
-        <center><img src="D:\AIS\Ros Inno\QRCode\2s.jpg" alt="Mountain View" width="180" height="180"></center>
+        <center><img src="rosinno/QRCode/2s.jpg" alt="Mountain View" width="180" height="180"></center>
         
         </div>
         <div class="panel-footer">
@@ -129,10 +175,10 @@
     <div class="col-lg-2 col-md-6">
       <div class = "panel panel-success">
         <div class = "panel-heading">
-        <h3 class = "panel-title"><center>P'Ple</center></h3>
+        <h3 class = "panel-title"><center>APP Gu Roo MAT</center></h3>
         </div>
         <div class = "panel-body">
-          <center><img src="D:\AIS\Ros Inno\QRCode\2s.jpg" alt="Mountain View" width="180" height="180"></center>
+          <center><img src="D:\AIS\Ros Inno\QRCode\APPGuRooMAT.png" alt="Mountain View" width="180" height="180"></center>
 
         </div>
         <div class="panel-footer">
